import "MsgHead.proto";    
message GS2GateLoginOKACK
{
	required string name = 1;
	required int32 level = 2;
	required int32 icon = 3;
}


message GS2GateErrorACK
{
	enum enResult
	{
		LG_UNKNOW				 = 0;
		LG_ALREADYLOGIN			 = 1;
	}
	required enResult en = 1;
}